fix: structured list alignment default prop and modifier class

--- a/src/components/external/PayoutDetails/components/PayoutData.scss
+++ b/src/components/external/PayoutDetails/components/PayoutData.scss
@@ -61,11 +61,6 @@
         &__item {
             padding: style.token(spacer-040) style.token(spacer-070);
         }
-
-        &__content {
-            padding-bottom: style.token(spacer-030);
-            padding-top: style.token(spacer-030);
-        }
     }
 
     &--unpaid-amount {
